--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
@@ -22,13 +24,16 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "framer-motion": "^12.15.0",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "yup": "^1.6.1"
