--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "cropperjs": "^2.0.0",
     "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.4.2",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
