--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cropperjs": "^2.0.0",
     "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-cropper": "^2.3.3",
