--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "axios": "^1.9.0",
     "cropperjs": "^2.0.0",
     "framer-motion": "^12.15.0",
