--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
     "axios": "^1.9.0",
     "cropperjs": "^2.0.0",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -36,6 +39,7 @@
     "react-easy-crop": "^5.4.2",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
